objects/kugo2p__KugamonSetting__c.object
<CustomObject>
    <fields>
        <fullName>kugo2p__SyncPrimaryQuotetoOpportunityAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Updates Opportunity Amount with Quote Net Amount only if Opportunity has no Products</inlineHelpText>
        <label>Sync Primary Quote to Opportunity Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__SyncPrimaryQuotetoOpportunityLines__c</fullName>
        <description>Updates Opportunity Product with Quote Product and Service Lines. Quote Optional Lines and Quote Additional Charges/Credit Lines are not Synced. Sync is one-way from Quote to Opportunity.</description>
        <inlineHelpText>Updates Opportunity Product with Quote Product and Service Lines. Quote Optional Lines and Quote Additional Charges/Credit Lines are not Synced. Sync is one-way from Quote to Opportunity</inlineHelpText>
        <label>Sync Primary Quote to Opportunity Lines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Draft</fullName>
                </value>
                <value>
                    <fullName>Quote Sent</fullName>
                </value>
                <value>
                    <fullName>Quote Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable VAT/GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitofMeasure__c</fullName>
        <description>Default Unit of Measure for Additional Product Info.</description>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__UnitofTerm__c</fullName>
        <description>Default Unit of Term for Additional Product Info.</description>
        <label>Unit of Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Galactic Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__UpdateAdditionalAccountInfoContacts__c</fullName>
        <description>Sets the default value for Order &apos;Update Additional Account Info Contacts&apos; field. Function updates Additional Account Info corresponding field on Order Release.</description>
        <inlineHelpText>Sets the default value for Order &apos;Update Additional Account Info Contacts&apos; field. Function updates Additional Account Info corresponding field on Order Release.</inlineHelpText>
        <label>Update Additional Account Info Contacts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__ContactType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__UpdateOpportunityAmountBasis__c</fullName>
        <inlineHelpText>Total Amount = Product &amp; Service Amount + Discount Amount, while Net Amount = Total Amount + Additional Charges/Credit Amount + Total Tax Amount + Total VAT/GST Amount</inlineHelpText>
        <label>Update Opportunity Amount Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net Amount</fullName>
                    <default>true</default>
                    <label>Net Amount</label>
                </value>
                <value>
                    <fullName>Total Amount + Additional Charges/Credit Amount</fullName>
                </value>
                <value>
                    <fullName>Total Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__UseUserDetailsforDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use Record Owner User Company Name, Mailing Address, Phone &amp; Fax for Header and Footer for Kugamon Documents. Default is False, which uses the Organization info found in Setup | Company Information.</inlineHelpText>
        <label>Use Record Owner Details for Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__VAT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT/GST</label>
        <referenceTo>kugo2p__VAT__c</referenceTo>
        <relationshipLabel>Kugamon Settings</relationshipLabel>
        <relationshipName>Kugamon_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>kugo2p__Warehouse__c</referenceTo>
        <relationshipLabel>Kugamon Settings</relationshipLabel>
        <relationshipName>Kugamon_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Kugamon Setting</label>
    <nameField>
        <label>Kugamon Setting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kugamon Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>kugo2p__Payment_Terms_Due_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( kugo2p__PaymentTerms__c , &quot;Due Upon Receipt&quot;), OR(kugo2p__DaysTillPaymentDue__c  &lt;&gt; 0, ISBLANK(kugo2p__DaysTillPaymentDue__c)))</errorConditionFormula>
        <errorMessage>The Days Till Payment Due Date must equal &quot;0&quot; zero days if the Payment Term is Due Upon Receipt.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__Payment_Terms_Due_Date_Second_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( kugo2p__PaymentTerms__c , &quot;Due Upon Receipt&quot;)= FALSE, ISBLANK(kugo2p__DaysTillPaymentDue__c))</errorConditionFormula>
        <errorMessage>Please enter a number of days to the Days Till Payment Due Date field that matches the Payment Term.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__VAT_check</fullName>
        <active>true</active>
        <errorConditionFormula>or(
and(
kugo2p__TaxableVAT__c = false, 
ISBLANK(kugo2p__VAT__c) = false	
),
AND(
kugo2p__TaxableVAT__c  = true, 
ISBLANK( kugo2p__VAT__c) = true	
)
)</errorConditionFormula>
        <errorMessage>A valid default VAT setting must have both a Listing for &quot;VAT&quot; and a Check for &quot;Taxable VAT&quot;</errorMessage>
    </validationRules>
</CustomObject>